<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cart_card_view"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <!--item img-->


                <ImageView
                    android:layout_margin="8dp"
                    android:elevation="1dp"
                    android:id="@+id/cart_img"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:background="@drawable/fav_item_border"/>


        <!--item details-->
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            >




            <TextView
                android:id="@+id/cart_designer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/designer_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginBottom="4dp"
                />
            <TextView
                android:id="@+id/cart_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_text_size"
                android:layout_marginBottom="4dp"
                fontPath="fonts/CaviarDreams.ttf"
                />

            <TextView
                android:id="@+id/cart_shipping_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_text_size"
                android:layout_marginBottom="2dp"
                fontPath="fonts/CaviarDreams.ttf"
                />

            <LinearLayout
                android:id="@+id/action_con"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                >

                <TextView
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center"
                    android:id="@+id/cart_confirm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/button_accent"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    />

                <TextView
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cart_cancel_btn"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/button_accent"
                    android:text="cancel"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>